# nyaa-nyaa-nyaa

./: .gitignore  LICENSE  README.md  nyaa-nyaa-nyaa.cabal  stack.yaml
app/: Main.hs
config/: anime.sample.yaml  config.sample.yaml
src/: Anime.hs  Arg.hs  Config.hs  Lib.hs  Line.hs  Nyaa.hs  Project.hs  TimeRange.hs  Timestamp.hs
tools/: run.sh
