name:                nyaa-nyaa-nyaa
version:             0.1.0.0
synopsis:            nyaa-nyaa-nyaa is an anime notifier to let users
                     be able to focus on watching anime. It will poll
                     *somewhere* and notify when there comes a new
                     episode of anime.
description:         I, the anime notifier, notify and you shall watch.
homepage:            https://github.com/githubuser/nyaa-nyaa-nyaa
license:             BSD3
license-file:        LICENSE
author:              @alldne, @noraesae
maintainer:          Yonguk Jeong
copyright:           2016 Yonguk Jeong
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Arg
                       Lib
  build-depends:       base >= 4.7 && < 5
                     , rss-conduit
                     , wreq
                     , lens
                     , bytestring
                     , split
                     , argparser
                     , yaml
                     , transformers
  default-language:    Haskell2010

executable nyaa
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nyaa-nyaa-nyaa
                     , transformers
  default-language:    Haskell2010

test-suite nyaa-nyaa-nyaa-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nyaa-nyaa-nyaa
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/team-kke/nyaa-nyaa-nyaa
